--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
     "name": "motorx",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://ismail-is.github.io/Farhat-Freres-web",
     "scripts": {
         "dev": "next dev",
         "build": "next build",
+         "export": "next export",
+        "deploy": "gh-pages -d out",
         "start": "next start",
         "lint": "next lint",
         "sass": "sass --watch public/assets/scss/app.scss:public/assets/css/style.css"
@@ -24,5 +27,8 @@
         "sass": "^1.69.5",
         "swiper": "^11.0.7",
         "wowjs": "^1.1.3"
+    },
+    "devDependencies": {
+        "gh-pages": "^6.1.1"
     }
 }
